@@ -1,3 +1,10 @@
+2014-09-22 Ben Shi <powerstudio1st AT 163.com>
+	* device/lib/stm8/_modsint_stm8.s:
+	* device/lib/stm8/Makefile.in:
+	  stm8 optimized version of _modsint.
+	* src/stm8/peeph.def:
+	  add new rules to utilize the above optimized functions.
+
 2014-09-19 Ben Shi <powerstudio1st AT 163.com>
 	* device/lib/stm8/_divsint_stm8.s:
 	* device/lib/stm8/_mulint_stm8.s:
